# solanahack

ShadowFund/: .gitignore  AGENTS.md  README.md
ShadowFund/anchor/: Anchor.toml  package-lock.json
ShadowFund/anchor/programs/shadow-fund/: Cargo.toml
ShadowFund/anchor/programs/shadow-fund/src/: lib.rs
ShadowFund/anchor/scripts/: initialize-treasury.js  upload-idl.js
ShadowFund/anchor/tests/: setup.test.ts
ShadowFund/circuits/: Nargo.toml  Prover.toml
ShadowFund/circuits/src/: main.nr
ShadowFund/docs/: ARCHITECTURE.md  TRUST_AND_SAFETY.md
ShadowFund/web/: debug-discriminators.js  package-lock.json  package.json
ShadowFund/web/app/: globals.css  layout.tsx  page.tsx
ShadowFund/web/app/admin/: page.tsx
ShadowFund/web/app/campaign/[id]/: page.tsx
ShadowFund/web/app/circuits/: shadow_fund_proof.json
ShadowFund/web/app/components/: AppWalletProvider.tsx  Header.tsx
ShadowFund/web/app/create/: page.tsx
ShadowFund/web/app/my-campaigns/: page.tsx
ShadowFund/web/app/my-rewards/: page.tsx
ShadowFund/web/idl/: shadow_fund.json
ShadowFund/web/scripts/: fix_idl.js  repro_account.js  test_idl.js  test_idl_object.js
