[package]
name = "shadow-fund"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_fund"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
blake3 = "=1.5.1"
borsh = "=1.5.1"
borsh-derive = "=1.5.1"
toml_edit = "=0.20.0"
indexmap = "=2.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
